force-app/main/default/objects/UIpanel__c/UIpanel__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>UI Panel</label>
</CustomObject>