force-app/main/default/objects/UIpanel__c/fields/Appointment_Name__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Name</label>
    <type>Checkbox</type>
</CustomField>