force-app/main/default/objects/UIpanel__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capacity</label>
    <type>Checkbox</type>
</CustomField>