force-app/main/default/objects/UIpanel__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Description</label>
    <type>Checkbox</type>
</CustomField>