force-app/main/default/objects/UIpanel__c/fields/dobule_booking__c.field-meta.xml
<CustomField>
    <fullName>dobule_booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>dobule booking</label>
    <type>Checkbox</type>
</CustomField>