force-app/main/default/objects/UIpanel__c/fields/Header_BG_Color__c.field-meta.xml
<CustomField>
    <fullName>Header_BG_Color__c</fullName>
    <defaultValue>&quot;header-bg7&quot;</defaultValue>
    <label>Header BG Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>