force-app/main/default/objects/UIpanel__c/fields/Left_Panel_BG_Color__c.field-meta.xml
<CustomField>
    <fullName>Left_Panel_BG_Color__c</fullName>
    <defaultValue>&quot;lpanel-bg1&quot;</defaultValue>
    <label>Left Panel BG Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>