force-app/main/default/objects/UIpanel__c/fields/Logo_Color_BG__c.field-meta.xml
<CustomField>
    <fullName>Logo_Color_BG__c</fullName>
    <defaultValue>&quot;logo-bg2&quot;</defaultValue>
    <label>Logo Color BG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>