force-app/main/default/objects/UIpanel__c/fields/Navigation_Side__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Side__c</fullName>
    <defaultValue>&quot;Left&quot;</defaultValue>
    <label>Navigation Side</label>
    <length>255</length>
    <type>Text</type>
</CustomField>