force-app/main/default/objects/UIpanel__c/fields/Navigation_Type__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Type__c</fullName>
    <defaultValue>&quot;Vertical&quot;</defaultValue>
    <label>Navigation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>