force-app/main/default/objects/UIpanel__c/fields/SideBar_Effect__c.field-meta.xml
<CustomField>
    <fullName>SideBar_Effect__c</fullName>
    <defaultValue>&quot;Default&quot;</defaultValue>
    <label>SideBar Effect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>