force-app/main/default/objects/UIpanel__c/fields/Sidebar_Position__c.field-meta.xml
<CustomField>
    <fullName>Sidebar_Position__c</fullName>
    <defaultValue>&quot;Default&quot;</defaultValue>
    <label>Sidebar Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>