force-app/main/default/objects/UIpanel__c/fields/Status_Completed__c.field-meta.xml
<CustomField>
    <fullName>Status_Completed__c</fullName>
    <defaultValue>&quot;green&quot;</defaultValue>
    <label>Status Completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>