force-app/main/default/objects/UIpanel__c/fields/Status_Declined__c.field-meta.xml
<CustomField>
    <fullName>Status_Declined__c</fullName>
    <defaultValue>&quot;red&quot;</defaultValue>
    <label>Status Declined</label>
    <length>255</length>
    <type>Text</type>
</CustomField>