force-app/main/default/objects/UIpanel__c/fields/Status_Running__c.field-meta.xml
<CustomField>
    <fullName>Status_Running__c</fullName>
    <defaultValue>&quot;blue&quot;</defaultValue>
    <label>Status Running</label>
    <length>255</length>
    <type>Text</type>
</CustomField>