force-app/main/default/objects/UIpanel__c/fields/Status_Upcoming__c.field-meta.xml
<CustomField>
    <fullName>Status_Upcoming__c</fullName>
    <defaultValue>&quot;pink&quot;</defaultValue>
    <label>Status Upcoming</label>
    <length>255</length>
    <type>Text</type>
</CustomField>